--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
+.app {
+  background: #209cee;
+  padding: 30px;
+  height: 100vh;
+}
+.todo-list {
+  background: #e8e8e8;
+  padding: 5px;
+  border-radius: 4px;
+  max-width: 400px;
+}
+.todo {
+  background: #fff;
+  padding: 3px 10px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  font-size: 12px;
+  margin-bottom: 6px;
+  border-radius: 3px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.input {
+  width: 100%;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 4px;
+  box-shadow: none;
+  padding: 1rem;
+  height: 2.25rem;
+}
+.btn {
+  /* width: 80px;
+  height: 2.25rem;
+  padding: 10px;
+  text-align: center;
+  margin: 5px;
+  display: flex;
+  color: red; */
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 5px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 5px;
+}
+.todoHead {
+  max-width: 400px;
+  border-radius: 4px;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
+  background-color: antiquewhite;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.btn-c {
+  background-color: #008cba;
+  color: #e7e7e7;
+  border-radius: 8px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-x {
+  background-color: #f44336;
+  color: #e7e7e7;
+  border-radius: 50%;
 }
