--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,23 @@
 .app {
   background: #209cee;
   padding: 30px;
-  height: 100vh;
+  height: 60vh;
+  text-align: center;
+  margin: auto;
 }
 .todo-list {
   background: #e8e8e8;
   padding: 5px;
   border-radius: 4px;
   max-width: 400px;
+  margin: auto;
 }
 .todo {
   background: #fff;
   padding: 3px 10px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
   font-size: 12px;
+  margin: auto;
   margin-bottom: 6px;
   border-radius: 3px;
   display: flex;
@@ -28,6 +32,7 @@
   box-shadow: none;
   padding: 1rem;
   height: 2.25rem;
+  margin: auto;
 }
 .btn {
   /* width: 80px;
@@ -53,6 +58,7 @@
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.15);
   background-color: antiquewhite;
   text-align: center;
+  margin: auto;
 }
 .btn-c {
   background-color: #008cba;
@@ -63,4 +69,10 @@
   background-color: #f44336;
   color: #e7e7e7;
   border-radius: 50%;
+}
+.App {
+  margin: auto;
+  width: 80%;
+  border: 1px solid green;
+  padding: 10px;
 }
